backups/iptables_rules_backup_20250915_164202.txt
# Generated by iptables-save v1.8.7 on Mon Sep 15 02:42:02 2025
*nat
:PREROUTING ACCEPT [50208:11312450]
:INPUT ACCEPT [42125:10177361]
:OUTPUT ACCEPT [20155:2025139]
:POSTROUTING ACCEPT [20076:2019707]
:DNSFILTER - [0:0]
:UBIOS_BLOCKPAGE_JUMP - [0:0]
:UBIOS_DNSFILTER_JUMP - [0:0]
:UBIOS_DOH_JUMP - [0:0]
:UBIOS_HONEYPOT_NAT - [0:0]
:UBIOS_INPUT_JUMP - [0:0]
:UBIOS_OUTPUT_JUMP - [0:0]
:UBIOS_POSTROUTING_JUMP - [0:0]
:UBIOS_POSTROUTING_USER_HOOK - [0:0]
:UBIOS_PREROUTING_JUMP - [0:0]
:UBIOS_WF_PRE_JUMP - [0:0]
-A PREROUTING -j UBIOS_PREROUTING_JUMP
-A INPUT -j UBIOS_INPUT_JUMP
-A OUTPUT -j UBIOS_OUTPUT_JUMP
-A POSTROUTING -j UBIOS_POSTROUTING_JUMP
-A DNSFILTER -p tcp -m set --match-set dnsfilter src -m tcp --dport 53 -j DNAT --to-destination 127.0.0.1:1053
-A DNSFILTER -p udp -m set --match-set dnsfilter src -m udp --dport 53 -j DNAT --to-destination 127.0.0.1:1053
-A DNSFILTER -p tcp -m set --match-set dnsfilterMac src -m tcp --dport 53 -j DNAT --to-destination 127.0.0.1:1053
-A DNSFILTER -p udp -m set --match-set dnsfilterMac src -m udp --dport 53 -j DNAT --to-destination 127.0.0.1:1053
-A UBIOS_BLOCKPAGE_JUMP -d 203.0.113.250/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 127.0.0.1:2080
-A UBIOS_BLOCKPAGE_JUMP -d 203.0.113.250/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 127.0.0.1:20443
-A UBIOS_DNSFILTER_JUMP -p tcp -m tcp --dport 53 -m mark --mark 0x760000/0x7e0000 -j DNSFILTER
-A UBIOS_DNSFILTER_JUMP -p udp -m udp --dport 53 -m mark --mark 0x760000/0x7e0000 -j DNSFILTER
-A UBIOS_DNSFILTER_JUMP -p tcp -m tcp --dport 53 -m mark --mark 0x1c0000/0x7e0000 -j RETURN
-A UBIOS_DNSFILTER_JUMP -p udp -m udp --dport 53 -m mark --mark 0x1c0000/0x7e0000 -j RETURN
-A UBIOS_DNSFILTER_JUMP -p tcp -m tcp --dport 53 -m mark --mark 0x1a0000/0x7e0000 -j RETURN
-A UBIOS_DNSFILTER_JUMP -p udp -m udp --dport 53 -m mark --mark 0x1a0000/0x7e0000 -j RETURN
-A UBIOS_DNSFILTER_JUMP -j DNSFILTER
-A UBIOS_DOH_JUMP -p tcp -m tcp --dport 53 -m set --match-set UBIOS_doh-0 src -m mark --mark 0x740000/0x7e0000 -j REDIRECT --to-ports 35053
-A UBIOS_DOH_JUMP -p udp -m udp --dport 53 -m set --match-set UBIOS_doh-0 src -m mark --mark 0x740000/0x7e0000 -j REDIRECT --to-ports 35053
-A UBIOS_DOH_JUMP -j RETURN
-A UBIOS_POSTROUTING_JUMP -j UBIOS_POSTROUTING_USER_HOOK
-A UBIOS_POSTROUTING_USER_HOOK -o eth4 -m set ! --match-set UBIOS_ALL_ADDRv4_eth4 src -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68b45fa609d55042380e8d56;PREDEFINED_MASQUERADE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_POSTROUTING_USER_HOOK -o eth4 -m set ! --match-set UBIOS_ALL_ADDRv4_eth4 src -m comment --comment 00000001095216660481 -j MASQUERADE
-A UBIOS_POSTROUTING_USER_HOOK -o eth3 -m set ! --match-set UBIOS_ALL_ADDRv4_eth3 src -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c78f85fa94de25fbbd81fc;PREDEFINED_MASQUERADE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_POSTROUTING_USER_HOOK -o eth3 -m set ! --match-set UBIOS_ALL_ADDRv4_eth3 src -m comment --comment 00000001095216660482 -j MASQUERADE
-A UBIOS_PREROUTING_JUMP -j UBIOS_DNSFILTER_JUMP
-A UBIOS_PREROUTING_JUMP -j UBIOS_BLOCKPAGE_JUMP
-A UBIOS_PREROUTING_JUMP -j UBIOS_DOH_JUMP
-A UBIOS_PREROUTING_JUMP -j UBIOS_WF_PRE_JUMP
-A UBIOS_WF_PRE_JUMP -i eth3 -j RETURN
-A UBIOS_WF_PRE_JUMP -i eth4 -j RETURN
-A UBIOS_WF_PRE_JUMP -p udp -m udp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x1c0000/0x7e0000 -j REDIRECT --to-ports 20202
-A UBIOS_WF_PRE_JUMP -p tcp -m tcp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x1c0000/0x7e0000 -j REDIRECT --to-ports 20202
-A UBIOS_WF_PRE_JUMP -p udp -m udp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x1a0000/0x7e0000 -j REDIRECT --to-ports 20201
-A UBIOS_WF_PRE_JUMP -p tcp -m tcp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x1a0000/0x7e0000 -j REDIRECT --to-ports 20201
COMMIT
# Completed on Mon Sep 15 02:42:02 2025
# Generated by iptables-save v1.8.7 on Mon Sep 15 02:42:02 2025
*mangle
:PREROUTING ACCEPT [21330541:23236810460]
:INPUT ACCEPT [20743619:22792805657]
:FORWARD ACCEPT [584384:443282216]
:OUTPUT ACCEPT [16168013:94793350583]
:POSTROUTING ACCEPT [16751198:95235354243]
:UBIOS_DNSFILTER_JUMP - [0:0]
:UBIOS_DOH_JUMP - [0:0]
:UBIOS_FORWARD_JUMP - [0:0]
:UBIOS_FORWARD_TCPMSS - [0:0]
:UBIOS_FORWARD_USER_HOOK - [0:0]
:UBIOS_INPUT_JUMP - [0:0]
:UBIOS_INPUT_USER_HOOK - [0:0]
:UBIOS_OUTPUT_JUMP - [0:0]
:UBIOS_OUTPUT_TCPMSS - [0:0]
:UBIOS_OUTPUT_USER_HOOK - [0:0]
:UBIOS_POSTROUTING_JUMP - [0:0]
:UBIOS_POSTROUTING_USER_HOOK - [0:0]
:UBIOS_PREROUTING_JUMP - [0:0]
:UBIOS_PREROUTING_USER_HOOK - [0:0]
:UBIOS_WF_GROUP_1_SINGLE - [0:0]
:UBIOS_WF_GROUP_2_SINGLE - [0:0]
:UBIOS_WF_IFACE_ETH3 - [0:0]
:UBIOS_WF_IFACE_ETH4 - [0:0]
:UBIOS_WF_IN_WANS - [0:0]
:UBIOS_WF_OUT_JUMP - [0:0]
:UBIOS_WF_OUT_WANS - [0:0]
:UBIOS_WF_PRE_JUMP - [0:0]
:UBIOS_WF_RESTORE_MARK - [0:0]
-A PREROUTING -j UBIOS_PREROUTING_JUMP
-A INPUT -j UBIOS_INPUT_JUMP
-A FORWARD -j UBIOS_FORWARD_JUMP
-A OUTPUT -j UBIOS_OUTPUT_JUMP
-A POSTROUTING -j UBIOS_POSTROUTING_JUMP
-A UBIOS_DNSFILTER_JUMP -p tcp -m tcp --dport 53 -m mark --mark 0x0/0x7e0000 -m addrtype ! --dst-type LOCAL -j MARK --set-xmark 0x760000/0x7e0000
-A UBIOS_DNSFILTER_JUMP -p udp -m udp --dport 53 -m mark --mark 0x0/0x7e0000 -m addrtype ! --dst-type LOCAL -j MARK --set-xmark 0x760000/0x7e0000
-A UBIOS_DOH_JUMP ! -i lo -p tcp -m tcp --dport 53 -m mark --mark 0x0/0x7e0000 -j MARK --set-xmark 0x740000/0x7e0000
-A UBIOS_DOH_JUMP ! -i lo -p udp -m udp --dport 53 -m mark --mark 0x0/0x7e0000 -j MARK --set-xmark 0x740000/0x7e0000
-A UBIOS_FORWARD_JUMP -j UBIOS_FORWARD_TCPMSS
-A UBIOS_OUTPUT_JUMP -j UBIOS_WF_OUT_JUMP
-A UBIOS_OUTPUT_JUMP -j UBIOS_OUTPUT_TCPMSS
-A UBIOS_PREROUTING_JUMP -j UBIOS_DNSFILTER_JUMP
-A UBIOS_PREROUTING_JUMP -j UBIOS_DOH_JUMP
-A UBIOS_PREROUTING_JUMP -j UBIOS_WF_PRE_JUMP
-A UBIOS_WF_GROUP_1_SINGLE -m state ! --state NEW -j RETURN
-A UBIOS_WF_GROUP_1_SINGLE -p udp -m udp --dport 53 -m addrtype --dst-type LOCAL -j RETURN
-A UBIOS_WF_GROUP_1_SINGLE -p tcp -m tcp --dport 53 -m addrtype --dst-type LOCAL -j RETURN
-A UBIOS_WF_GROUP_1_SINGLE -m mark --mark 0x0/0x7e0000 -m dyn_random --prob-name "eth4-wf-group-1-single" -j MARK --set-xmark 0x1a0000/0x7e0000
-A UBIOS_WF_GROUP_1_SINGLE -m mark ! --mark 0x0/0x7e0000 -j CONNMARK --save-mark --nfmask 0x7e0000 --ctmask 0x7e0000
-A UBIOS_WF_GROUP_1_SINGLE -j RETURN
-A UBIOS_WF_GROUP_2_SINGLE -m state ! --state NEW -j RETURN
-A UBIOS_WF_GROUP_2_SINGLE -p udp -m udp --dport 53 -m addrtype --dst-type LOCAL -j RETURN
-A UBIOS_WF_GROUP_2_SINGLE -p tcp -m tcp --dport 53 -m addrtype --dst-type LOCAL -j RETURN
-A UBIOS_WF_GROUP_2_SINGLE -m mark --mark 0x0/0x7e0000 -m dyn_random --prob-name "eth3-wf-group-2-single" -j MARK --set-xmark 0x1c0000/0x7e0000
-A UBIOS_WF_GROUP_2_SINGLE -m mark ! --mark 0x0/0x7e0000 -j CONNMARK --save-mark --nfmask 0x7e0000 --ctmask 0x7e0000
-A UBIOS_WF_GROUP_2_SINGLE -j RETURN
-A UBIOS_WF_IFACE_ETH3 -j MARK --set-xmark 0x1c0000/0x7e0000
-A UBIOS_WF_IFACE_ETH3 -m mark ! --mark 0x0/0x7e0000 -j CONNMARK --save-mark --nfmask 0x7e0000 --ctmask 0x7e0000
-A UBIOS_WF_IFACE_ETH3 -j RETURN
-A UBIOS_WF_IFACE_ETH4 -j MARK --set-xmark 0x1a0000/0x7e0000
-A UBIOS_WF_IFACE_ETH4 -m mark ! --mark 0x0/0x7e0000 -j CONNMARK --save-mark --nfmask 0x7e0000 --ctmask 0x7e0000
-A UBIOS_WF_IFACE_ETH4 -j RETURN
-A UBIOS_WF_IN_WANS -m state ! --state NEW -j RETURN
-A UBIOS_WF_IN_WANS -i eth3 -j UBIOS_WF_IFACE_ETH3
-A UBIOS_WF_IN_WANS -i eth4 -j UBIOS_WF_IFACE_ETH4
-A UBIOS_WF_OUT_JUMP -j UBIOS_WF_RESTORE_MARK
-A UBIOS_WF_OUT_JUMP -j UBIOS_WF_OUT_WANS
-A UBIOS_WF_OUT_JUMP -j UBIOS_WF_GROUP_1_SINGLE
-A UBIOS_WF_OUT_WANS -m state ! --state NEW -j RETURN
-A UBIOS_WF_OUT_WANS -m mark ! --mark 0x0/0x7e0000 -j RETURN
-A UBIOS_WF_OUT_WANS -s 10.210.119.207/32 -j UBIOS_WF_IFACE_ETH3
-A UBIOS_WF_OUT_WANS -s 124.187.49.228/32 -j UBIOS_WF_IFACE_ETH4
-A UBIOS_WF_PRE_JUMP -j UBIOS_WF_RESTORE_MARK
-A UBIOS_WF_PRE_JUMP -j UBIOS_WF_IN_WANS
-A UBIOS_WF_PRE_JUMP -j UBIOS_WF_GROUP_1_SINGLE
-A UBIOS_WF_RESTORE_MARK -m connmark --mark 0x0/0x7e0000 -j RETURN
-A UBIOS_WF_RESTORE_MARK -j CONNMARK --restore-mark --nfmask 0x7e0000 --ctmask 0x7e0000
COMMIT
# Completed on Mon Sep 15 02:42:02 2025
# Generated by iptables-save v1.8.7 on Mon Sep 15 02:42:02 2025
*filter
:INPUT ACCEPT [169878:104982143]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [169878:104982143]
:ALIEN - [0:0]
:ALIENLOGNDROP - [0:0]
:TOR - [0:0]
:TORLOGNDROP - [0:0]
:UBIOS_DMZ_DMZ_USER - [0:0]
:UBIOS_DMZ_GUEST_USER - [0:0]
:UBIOS_DMZ_IN_USER - [0:0]
:UBIOS_DMZ_LAN_USER - [0:0]
:UBIOS_DMZ_LOCAL_USER - [0:0]
:UBIOS_DMZ_VPN_USER - [0:0]
:UBIOS_DMZ_WAN_USER - [0:0]
:UBIOS_DNS_PBR_JUMP - [0:0]
:UBIOS_FLOW_ACCOUNTING - [0:0]
:UBIOS_FORWARD_IN_USER - [0:0]
:UBIOS_FORWARD_JUMP - [0:0]
:UBIOS_FORWARD_OUT_USER - [0:0]
:UBIOS_FORWARD_USER_HOOK - [0:0]
:UBIOS_GUEST_DMZ_USER - [0:0]
:UBIOS_GUEST_GUEST_USER - [0:0]
:UBIOS_GUEST_IN_USER - [0:0]
:UBIOS_GUEST_LAN_USER - [0:0]
:UBIOS_GUEST_LOCAL_USER - [0:0]
:UBIOS_GUEST_VPN_USER - [0:0]
:UBIOS_GUEST_WAN_USER - [0:0]
:UBIOS_HONEYPOT_FILTER - [0:0]
:UBIOS_INPUT_JUMP - [0:0]
:UBIOS_INPUT_USER_HOOK - [0:0]
:UBIOS_IN_GEOIP - [0:0]
:UBIOS_LAN_DMZ_USER - [0:0]
:UBIOS_LAN_GUEST_USER - [0:0]
:UBIOS_LAN_IN_USER - [0:0]
:UBIOS_LAN_LAN_USER - [0:0]
:UBIOS_LAN_LOCAL_USER - [0:0]
:UBIOS_LAN_VPN_USER - [0:0]
:UBIOS_LAN_WAN_USER - [0:0]
:UBIOS_LOCAL_DMZ_USER - [0:0]
:UBIOS_LOCAL_GUEST_USER - [0:0]
:UBIOS_LOCAL_LAN_USER - [0:0]
:UBIOS_LOCAL_VPN_USER - [0:0]
:UBIOS_LOCAL_WAN_USER - [0:0]
:UBIOS_NETFLOW_IN - [0:0]
:UBIOS_NETFLOW_OUT - [0:0]
:UBIOS_OUTPUT_JUMP - [0:0]
:UBIOS_OUTPUT_USER_HOOK - [0:0]
:UBIOS_OUT_GEOIP - [0:0]
:UBIOS_VPN_DMZ_USER - [0:0]
:UBIOS_VPN_GUEST_USER - [0:0]
:UBIOS_VPN_IN_USER - [0:0]
:UBIOS_VPN_LAN_USER - [0:0]
:UBIOS_VPN_LOCAL_USER - [0:0]
:UBIOS_VPN_VPN_USER - [0:0]
:UBIOS_VPN_WAN_USER - [0:0]
:UBIOS_WAN_DMZ_USER - [0:0]
:UBIOS_WAN_GUEST_USER - [0:0]
:UBIOS_WAN_IN_USER - [0:0]
:UBIOS_WAN_LAN_USER - [0:0]
:UBIOS_WAN_LOCAL_USER - [0:0]
:UBIOS_WAN_VPN_USER - [0:0]
:UBIOS_WAN_WAN_USER - [0:0]
-A INPUT -s 169.254.0.0/16 -i eth1 -j DROP
-A INPUT -s 192.168.0.0/16 -i eth1 -j DROP
-A INPUT -s 172.16.0.0/12 -i eth1 -j DROP
-A INPUT -s 10.0.0.0/8 -i eth1 -j DROP
-A INPUT -s 169.254.0.0/16 -i eth0 -j DROP
-A INPUT -s 192.168.0.0/16 -i eth0 -j DROP
-A INPUT -s 172.16.0.0/12 -i eth0 -j DROP
-A INPUT -s 10.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 169.254.0.0/16 -i ppp0 -j DROP
-A INPUT -s 192.168.0.0/16 -i ppp0 -j DROP
-A INPUT -s 172.16.0.0/12 -i ppp0 -j DROP
-A INPUT -s 10.0.0.0/8 -i ppp0 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan2 -j DROP
-A INPUT -s 192.168.0.0/16 -i wan2 -j DROP
-A INPUT -s 172.16.0.0/12 -i wan2 -j DROP
-A INPUT -s 10.0.0.0/8 -i wan2 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan1 -j DROP
-A INPUT -s 192.168.0.0/16 -i wan1 -j DROP
-A INPUT -s 172.16.0.0/12 -i wan1 -j DROP
-A INPUT -s 10.0.0.0/8 -i wan1 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan -j DROP
-A INPUT -s 192.168.0.0/16 -i wan -j DROP
-A INPUT -s 172.16.0.0/12 -i wan -j DROP
-A INPUT -s 10.0.0.0/8 -i wan -j DROP
-A INPUT -s 198.18.0.0/15 -i wan -j DROP
-A INPUT -s 203.0.113.0/24 -i wan -j DROP
-A INPUT -s 198.51.100.0/24 -i wan -j DROP
-A INPUT -s 192.0.2.0/24 -i wan -j DROP
-A INPUT -s 240.0.0.0/4 -i wan -j DROP
-A INPUT -s 224.0.0.0/4 -i wan -j DROP
-A INPUT -s 0.0.0.0/8 -i wan -j DROP
-A INPUT -s 127.0.0.0/8 -i wan -j DROP
-A INPUT -s 169.254.0.0/16 -i wan -j DROP
-A INPUT -s 192.168.0.0/16 -i wan -j DROP
-A INPUT -s 172.16.0.0/12 -i wan -j DROP
-A INPUT -s 10.0.0.0/8 -i wan -j DROP
-A INPUT -s 169.254.0.0/16 -i eth1 -j DROP
-A INPUT -s 192.168.0.0/16 -i eth1 -j DROP
-A INPUT -s 172.16.0.0/12 -i eth1 -j DROP
-A INPUT -s 10.0.0.0/8 -i eth1 -j DROP
-A INPUT -s 169.254.0.0/16 -i eth0 -j DROP
-A INPUT -s 192.168.0.0/16 -i eth0 -j DROP
-A INPUT -s 172.16.0.0/12 -i eth0 -j DROP
-A INPUT -s 10.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 169.254.0.0/16 -i ppp0 -j DROP
-A INPUT -s 192.168.0.0/16 -i ppp0 -j DROP
-A INPUT -s 172.16.0.0/12 -i ppp0 -j DROP
-A INPUT -s 10.0.0.0/8 -i ppp0 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan2 -j DROP
-A INPUT -s 192.168.0.0/16 -i wan2 -j DROP
-A INPUT -s 172.16.0.0/12 -i wan2 -j DROP
-A INPUT -s 10.0.0.0/8 -i wan2 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan1 -j DROP
-A INPUT -s 192.168.0.0/16 -i wan1 -j DROP
-A INPUT -s 172.16.0.0/12 -i wan1 -j DROP
-A INPUT -s 10.0.0.0/8 -i wan1 -j DROP
-A INPUT -s 169.254.0.0/16 -i wan -j DROP
-A INPUT -s 192.168.0.0/16 -i wan -j DROP
-A INPUT -s 172.16.0.0/12 -i wan -j DROP
-A INPUT -s 10.0.0.0/8 -i wan -j DROP
-A INPUT -s 198.18.0.0/15 -i wan -j DROP
-A INPUT -s 203.0.113.0/24 -i wan -j DROP
-A INPUT -s 198.51.100.0/24 -i wan -j DROP
-A INPUT -s 192.0.2.0/24 -i wan -j DROP
-A INPUT -s 240.0.0.0/4 -i wan -j DROP
-A INPUT -s 224.0.0.0/4 -i wan -j DROP
-A INPUT -s 0.0.0.0/8 -i wan -j DROP
-A INPUT -s 127.0.0.0/8 -i wan -j DROP
-A INPUT -s 169.254.0.0/16 -i wan -j DROP
-A INPUT -s 192.168.0.0/16 -i wan -j DROP
-A INPUT -s 172.16.0.0/12 -i wan -j DROP
-A INPUT -s 10.0.0.0/8 -i wan -j DROP
-A INPUT -j ALIEN
-A INPUT -j TOR
-A INPUT -d 127.0.0.1/32 -p udp -m set --match-set dnsfilter src -m udp --dport 1053 -j ACCEPT
-A INPUT -d 127.0.0.1/32 -p tcp -m set --match-set dnsfilter src -m tcp --dport 1053 -j ACCEPT
-A INPUT -j UBIOS_INPUT_JUMP
-A FORWARD -d 198.18.0.0/15 -j DROP
-A FORWARD -s 198.18.0.0/15 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 198.18.0.0/15 -j DROP
-A FORWARD -s 198.18.0.0/15 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 203.0.113.0/24 -j DROP
-A FORWARD -s 203.0.113.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 203.0.113.0/24 -j DROP
-A FORWARD -s 203.0.113.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 198.51.100.0/24 -j DROP
-A FORWARD -s 198.51.100.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 198.51.100.0/24 -j DROP
-A FORWARD -s 198.51.100.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 192.0.2.0/24 -j DROP
-A FORWARD -s 192.0.2.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 192.0.2.0/24 -j DROP
-A FORWARD -s 192.0.2.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 240.0.0.0/4 -j DROP
-A FORWARD -s 240.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 240.0.0.0/4 -j DROP
-A FORWARD -s 240.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 224.0.0.0/4 -j DROP
-A FORWARD -s 224.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 224.0.0.0/4 -j DROP
-A FORWARD -s 224.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 0.0.0.0/8 -j DROP
-A FORWARD -s 0.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 0.0.0.0/8 -j DROP
-A FORWARD -s 0.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 127.0.0.0/8 -j DROP
-A FORWARD -s 127.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 127.0.0.0/8 -j DROP
-A FORWARD -s 127.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 169.254.0.0/16 -j DROP
-A FORWARD -s 169.254.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 169.254.0.0/16 -j DROP
-A FORWARD -s 169.254.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 192.168.0.0/16 -j DROP
-A FORWARD -s 192.168.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 192.168.0.0/16 -j DROP
-A FORWARD -s 192.168.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 172.16.0.0/12 -j DROP
-A FORWARD -s 172.16.0.0/12 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 172.16.0.0/12 -j DROP
-A FORWARD -s 172.16.0.0/12 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 10.0.0.0/8 -j DROP
-A FORWARD -s 10.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 10.0.0.0/8 -j DROP
-A FORWARD -s 10.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 198.18.0.0/15 -j DROP
-A FORWARD -s 198.18.0.0/15 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 198.18.0.0/15 -j DROP
-A FORWARD -s 198.18.0.0/15 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 203.0.113.0/24 -j DROP
-A FORWARD -s 203.0.113.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 203.0.113.0/24 -j DROP
-A FORWARD -s 203.0.113.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 198.51.100.0/24 -j DROP
-A FORWARD -s 198.51.100.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 198.51.100.0/24 -j DROP
-A FORWARD -s 198.51.100.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 192.0.2.0/24 -j DROP
-A FORWARD -s 192.0.2.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 192.0.2.0/24 -j DROP
-A FORWARD -s 192.0.2.0/24 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 240.0.0.0/4 -j DROP
-A FORWARD -s 240.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 240.0.0.0/4 -j DROP
-A FORWARD -s 240.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 224.0.0.0/4 -j DROP
-A FORWARD -s 224.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 224.0.0.0/4 -j DROP
-A FORWARD -s 224.0.0.0/4 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 0.0.0.0/8 -j DROP
-A FORWARD -s 0.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 0.0.0.0/8 -j DROP
-A FORWARD -s 0.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 127.0.0.0/8 -j DROP
-A FORWARD -s 127.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 127.0.0.0/8 -j DROP
-A FORWARD -s 127.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 169.254.0.0/16 -j DROP
-A FORWARD -s 169.254.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 169.254.0.0/16 -j DROP
-A FORWARD -s 169.254.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 192.168.0.0/16 -j DROP
-A FORWARD -s 192.168.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 192.168.0.0/16 -j DROP
-A FORWARD -s 192.168.0.0/16 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 172.16.0.0/12 -j DROP
-A FORWARD -s 172.16.0.0/12 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 172.16.0.0/12 -j DROP
-A FORWARD -s 172.16.0.0/12 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 10.0.0.0/8 -j DROP
-A FORWARD -s 10.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -s 10.0.0.0/8 -j DROP
-A FORWARD -s 10.0.0.0/8 -j LOG --log-prefix "BLOCK_UNMANAGED: "
-A FORWARD -d 169.254.0.0/16 -o eth1 -j DROP
-A FORWARD -s 169.254.0.0/16 -i eth1 -j DROP
-A FORWARD -d 192.168.0.0/16 -o eth1 -j DROP
-A FORWARD -s 192.168.0.0/16 -i eth1 -j DROP
-A FORWARD -d 172.16.0.0/12 -o eth1 -j DROP
-A FORWARD -s 172.16.0.0/12 -i eth1 -j DROP
-A FORWARD -d 10.0.0.0/8 -o eth1 -j DROP
-A FORWARD -s 10.0.0.0/8 -i eth1 -j DROP
-A FORWARD -d 169.254.0.0/16 -o eth0 -j DROP
-A FORWARD -s 169.254.0.0/16 -i eth0 -j DROP
-A FORWARD -d 192.168.0.0/16 -o eth0 -j DROP
-A FORWARD -s 192.168.0.0/16 -i eth0 -j DROP
-A FORWARD -d 172.16.0.0/12 -o eth0 -j DROP
-A FORWARD -s 172.16.0.0/12 -i eth0 -j DROP
-A FORWARD -d 10.0.0.0/8 -o eth0 -j DROP
-A FORWARD -s 10.0.0.0/8 -i eth0 -j DROP
-A FORWARD -d 169.254.0.0/16 -o ppp0 -j DROP
-A FORWARD -s 169.254.0.0/16 -i ppp0 -j DROP
-A FORWARD -d 192.168.0.0/16 -o ppp0 -j DROP
-A FORWARD -s 192.168.0.0/16 -i ppp0 -j DROP
-A FORWARD -d 172.16.0.0/12 -o ppp0 -j DROP
-A FORWARD -s 172.16.0.0/12 -i ppp0 -j DROP
-A FORWARD -d 10.0.0.0/8 -o ppp0 -j DROP
-A FORWARD -s 10.0.0.0/8 -i ppp0 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan2 -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan2 -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan2 -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan2 -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan2 -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan2 -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan2 -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan2 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan1 -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan1 -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan1 -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan1 -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan1 -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan1 -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan1 -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan1 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan -j DROP
-A FORWARD -d 198.18.0.0/15 -o wan -j DROP
-A FORWARD -s 198.18.0.0/15 -i wan -j DROP
-A FORWARD -d 203.0.113.0/24 -o wan -j DROP
-A FORWARD -s 203.0.113.0/24 -i wan -j DROP
-A FORWARD -d 198.51.100.0/24 -o wan -j DROP
-A FORWARD -s 198.51.100.0/24 -i wan -j DROP
-A FORWARD -d 192.0.2.0/24 -o wan -j DROP
-A FORWARD -s 192.0.2.0/24 -i wan -j DROP
-A FORWARD -d 240.0.0.0/4 -o wan -j DROP
-A FORWARD -s 240.0.0.0/4 -i wan -j DROP
-A FORWARD -d 224.0.0.0/4 -o wan -j DROP
-A FORWARD -s 224.0.0.0/4 -i wan -j DROP
-A FORWARD -d 0.0.0.0/8 -o wan -j DROP
-A FORWARD -s 0.0.0.0/8 -i wan -j DROP
-A FORWARD -d 127.0.0.0/8 -o wan -j DROP
-A FORWARD -s 127.0.0.0/8 -i wan -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan -j DROP
-A FORWARD -d 169.254.0.0/16 -o eth1 -j DROP
-A FORWARD -s 169.254.0.0/16 -i eth1 -j DROP
-A FORWARD -d 192.168.0.0/16 -o eth1 -j DROP
-A FORWARD -s 192.168.0.0/16 -i eth1 -j DROP
-A FORWARD -d 172.16.0.0/12 -o eth1 -j DROP
-A FORWARD -s 172.16.0.0/12 -i eth1 -j DROP
-A FORWARD -d 10.0.0.0/8 -o eth1 -j DROP
-A FORWARD -s 10.0.0.0/8 -i eth1 -j DROP
-A FORWARD -d 169.254.0.0/16 -o eth0 -j DROP
-A FORWARD -s 169.254.0.0/16 -i eth0 -j DROP
-A FORWARD -d 192.168.0.0/16 -o eth0 -j DROP
-A FORWARD -s 192.168.0.0/16 -i eth0 -j DROP
-A FORWARD -d 172.16.0.0/12 -o eth0 -j DROP
-A FORWARD -s 172.16.0.0/12 -i eth0 -j DROP
-A FORWARD -d 10.0.0.0/8 -o eth0 -j DROP
-A FORWARD -s 10.0.0.0/8 -i eth0 -j DROP
-A FORWARD -d 169.254.0.0/16 -o ppp0 -j DROP
-A FORWARD -s 169.254.0.0/16 -i ppp0 -j DROP
-A FORWARD -d 192.168.0.0/16 -o ppp0 -j DROP
-A FORWARD -s 192.168.0.0/16 -i ppp0 -j DROP
-A FORWARD -d 172.16.0.0/12 -o ppp0 -j DROP
-A FORWARD -s 172.16.0.0/12 -i ppp0 -j DROP
-A FORWARD -d 10.0.0.0/8 -o ppp0 -j DROP
-A FORWARD -s 10.0.0.0/8 -i ppp0 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan2 -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan2 -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan2 -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan2 -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan2 -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan2 -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan2 -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan2 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan1 -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan1 -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan1 -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan1 -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan1 -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan1 -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan1 -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan1 -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan -j DROP
-A FORWARD -d 198.18.0.0/15 -o wan -j DROP
-A FORWARD -s 198.18.0.0/15 -i wan -j DROP
-A FORWARD -d 203.0.113.0/24 -o wan -j DROP
-A FORWARD -s 203.0.113.0/24 -i wan -j DROP
-A FORWARD -d 198.51.100.0/24 -o wan -j DROP
-A FORWARD -s 198.51.100.0/24 -i wan -j DROP
-A FORWARD -d 192.0.2.0/24 -o wan -j DROP
-A FORWARD -s 192.0.2.0/24 -i wan -j DROP
-A FORWARD -d 240.0.0.0/4 -o wan -j DROP
-A FORWARD -s 240.0.0.0/4 -i wan -j DROP
-A FORWARD -d 224.0.0.0/4 -o wan -j DROP
-A FORWARD -s 224.0.0.0/4 -i wan -j DROP
-A FORWARD -d 0.0.0.0/8 -o wan -j DROP
-A FORWARD -s 0.0.0.0/8 -i wan -j DROP
-A FORWARD -d 127.0.0.0/8 -o wan -j DROP
-A FORWARD -s 127.0.0.0/8 -i wan -j DROP
-A FORWARD -d 169.254.0.0/16 -o wan -j DROP
-A FORWARD -s 169.254.0.0/16 -i wan -j DROP
-A FORWARD -d 192.168.0.0/16 -o wan -j DROP
-A FORWARD -s 192.168.0.0/16 -i wan -j DROP
-A FORWARD -d 172.16.0.0/12 -o wan -j DROP
-A FORWARD -s 172.16.0.0/12 -i wan -j DROP
-A FORWARD -d 10.0.0.0/8 -o wan -j DROP
-A FORWARD -s 10.0.0.0/8 -i wan -j DROP
-A FORWARD -j ALIEN
-A FORWARD -j TOR
-A FORWARD -j UBIOS_FORWARD_JUMP
-A OUTPUT -d 169.254.0.0/16 -o eth1 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o eth1 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o eth1 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o eth1 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o eth0 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o eth0 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o eth0 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o eth0 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o ppp0 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o ppp0 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o ppp0 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o ppp0 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan2 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan2 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan2 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan2 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan1 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan1 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan1 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan1 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 198.18.0.0/15 -o wan -j DROP
-A OUTPUT -d 203.0.113.0/24 -o wan -j DROP
-A OUTPUT -d 198.51.100.0/24 -o wan -j DROP
-A OUTPUT -d 192.0.2.0/24 -o wan -j DROP
-A OUTPUT -d 240.0.0.0/4 -o wan -j DROP
-A OUTPUT -d 224.0.0.0/4 -o wan -j DROP
-A OUTPUT -d 0.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 127.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 169.254.0.0/16 -o eth1 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o eth1 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o eth1 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o eth1 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o eth0 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o eth0 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o eth0 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o eth0 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o ppp0 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o ppp0 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o ppp0 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o ppp0 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan2 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan2 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan2 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan2 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan1 -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan1 -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan1 -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan1 -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 198.18.0.0/15 -o wan -j DROP
-A OUTPUT -d 203.0.113.0/24 -o wan -j DROP
-A OUTPUT -d 198.51.100.0/24 -o wan -j DROP
-A OUTPUT -d 192.0.2.0/24 -o wan -j DROP
-A OUTPUT -d 240.0.0.0/4 -o wan -j DROP
-A OUTPUT -d 224.0.0.0/4 -o wan -j DROP
-A OUTPUT -d 0.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 127.0.0.0/8 -o wan -j DROP
-A OUTPUT -d 169.254.0.0/16 -o wan -j DROP
-A OUTPUT -d 192.168.0.0/16 -o wan -j DROP
-A OUTPUT -d 172.16.0.0/12 -o wan -j DROP
-A OUTPUT -d 10.0.0.0/8 -o wan -j DROP
-A OUTPUT -j UBIOS_OUTPUT_JUMP
-A ALIEN -m set --match-set ALIEN src -j ALIENLOGNDROP
-A ALIENLOGNDROP -m set --match-set ALIEN_WHITELIST_SRC src -j RETURN
-A ALIENLOGNDROP -m set --match-set ALIEN_WHITELIST_DST dst -j RETURN
-A ALIENLOGNDROP -m limit --limit 1/min -j NFLOG --nflog-prefix  "[IGNORE LOGGING]" --nflog-group 3 --nflog-threshold 16
-A ALIENLOGNDROP -j DROP
-A TOR -m set --match-set TOR src -j TORLOGNDROP
-A TORLOGNDROP -m set --match-set TOR_WHITELIST_SRC src -j RETURN
-A TORLOGNDROP -m set --match-set TOR_WHITELIST_DST dst -j RETURN
-A TORLOGNDROP -m limit --limit 1/min -j NFLOG --nflog-prefix  "[IGNORE LOGGING]" --nflog-group 3 --nflog-threshold 16
-A TORLOGNDROP -j DROP
-A UBIOS_DMZ_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396b;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_DMZ_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396c;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_GUEST_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_IN_USER -d 203.0.113.2/32 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3921;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -d 203.0.113.2/32 -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390e;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m comment --comment 00000001095216690481 -j UBIOS_DMZ_DMZ_USER
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3915;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m comment --comment 00000001095216690482 -j UBIOS_DMZ_GUEST_USER
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c1f5a3e5e589764c4f021a;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m comment --comment 00000001095216690483 -j UBIOS_DMZ_LAN_USER
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3911;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m comment --comment 00000001095216690485 -j UBIOS_DMZ_VPN_USER
-A UBIOS_DMZ_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390c;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m comment --comment 00000001095216690486 -j UBIOS_DMZ_WAN_USER
-A UBIOS_DMZ_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3927;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690487 -j ACCEPT
-A UBIOS_DMZ_IN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3929;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_IN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814a70efff1d386d3970;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_DMZ_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396a;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_LAN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3965;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_DMZ_LOCAL_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3967;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_LOCAL_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396f;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_DMZ_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396d;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_VPN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_DMZ_WAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d396e;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_WAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690480 -j DROP
-A UBIOS_DMZ_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814a70efff1d386d3971;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_DMZ_WAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_DNS_PBR_JUMP -i eth3 -j RETURN
-A UBIOS_DNS_PBR_JUMP -i eth4 -j RETURN
-A UBIOS_DNS_PBR_JUMP -p udp -m udp --dport 20202 -m addrtype --dst-type LOCAL -m mark --mark 0x1c0000/0x7e0000 -j ACCEPT
-A UBIOS_DNS_PBR_JUMP -p tcp -m tcp --dport 20202 -m addrtype --dst-type LOCAL -m mark --mark 0x1c0000/0x7e0000 -j ACCEPT
-A UBIOS_DNS_PBR_JUMP -p udp -m udp --dport 20201 -m addrtype --dst-type LOCAL -m mark --mark 0x1a0000/0x7e0000 -j ACCEPT
-A UBIOS_DNS_PBR_JUMP -p tcp -m tcp --dport 20201 -m addrtype --dst-type LOCAL -m mark --mark 0x1a0000/0x7e0000 -j ACCEPT
-A UBIOS_DNS_PBR_JUMP -p udp -m udp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x10000/0x10000 -j DROP
-A UBIOS_DNS_PBR_JUMP -p tcp -m tcp --dport 53 -m addrtype --dst-type LOCAL -m mark --mark 0x10000/0x10000 -j DROP
-A UBIOS_FLOW_ACCOUNTING -i br0 -j UBIOS_NETFLOW_IN
-A UBIOS_FLOW_ACCOUNTING -o br0 -j UBIOS_NETFLOW_OUT
-A UBIOS_FORWARD_IN_USER -i eth4 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68b45fa609d55042380e8d59;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_FORWARD_IN_USER -i eth4 -m comment --comment 00000001095216690480 -j UBIOS_WAN_IN_USER
-A UBIOS_FORWARD_IN_USER -i eth3 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c78f85fa94de25fbbd81ff;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_FORWARD_IN_USER -i eth3 -m comment --comment 00000001095216690481 -j UBIOS_WAN_IN_USER
-A UBIOS_FORWARD_IN_USER -i br0 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38d8;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_FORWARD_IN_USER -i br0 -m comment --comment 00000001095216690482 -j UBIOS_LAN_IN_USER
-A UBIOS_FORWARD_IN_USER -i wgsrv+ -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "686ad4480dfbe7565be71ed5;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_FORWARD_IN_USER -i wgsrv+ -m comment --comment 00000001095216690483 -j UBIOS_VPN_IN_USER
-A UBIOS_FORWARD_JUMP -j UBIOS_FLOW_ACCOUNTING
-A UBIOS_FORWARD_JUMP -j UBIOS_FORWARD_USER_HOOK
-A UBIOS_FORWARD_USER_HOOK -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38df;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_FORWARD_USER_HOOK -m comment --comment 00000001095216690480 -j UBIOS_FORWARD_IN_USER
-A UBIOS_GUEST_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3958;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_DMZ_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3954;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_GUEST_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_IN_USER -d 203.0.113.2/32 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3922;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -d 203.0.113.2/32 -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3917;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m comment --comment 00000001095216690481 -j UBIOS_GUEST_DMZ_USER
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3910;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m comment --comment 00000001095216690482 -j UBIOS_GUEST_GUEST_USER
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c1f5a3e5e589764c4f021b;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m comment --comment 00000001095216690483 -j UBIOS_GUEST_LAN_USER
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d391e;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m comment --comment 00000001095216690485 -j UBIOS_GUEST_VPN_USER
-A UBIOS_GUEST_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d391a;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m comment --comment 00000001095216690486 -j UBIOS_GUEST_WAN_USER
-A UBIOS_GUEST_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3926;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690487 -j ACCEPT
-A UBIOS_GUEST_IN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3928;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_IN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d394b;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_GUEST_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3951;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_LAN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3937;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_GUEST_LOCAL_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d392e;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_LOCAL_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3949;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_GUEST_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3952;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_VPN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_GUEST_WAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3957;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_WAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690480 -j DROP
-A UBIOS_GUEST_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d393b;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_GUEST_WAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_INPUT_JUMP -j UBIOS_DNS_PBR_JUMP
-A UBIOS_INPUT_JUMP -j UBIOS_INPUT_USER_HOOK
-A UBIOS_INPUT_USER_HOOK -i eth4 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68b45fa609d55042380e8d57;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_INPUT_USER_HOOK -i eth4 -m comment --comment 00000001095216690480 -j UBIOS_WAN_LOCAL_USER
-A UBIOS_INPUT_USER_HOOK -i eth3 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c78f85fa94de25fbbd81fd;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_INPUT_USER_HOOK -i eth3 -m comment --comment 00000001095216690481 -j UBIOS_WAN_LOCAL_USER
-A UBIOS_INPUT_USER_HOOK -i br0 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38d4;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_INPUT_USER_HOOK -i br0 -m comment --comment 00000001095216690482 -j UBIOS_LAN_LOCAL_USER
-A UBIOS_INPUT_USER_HOOK -i wgsrv+ -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "686ad4480dfbe7565be71ed4;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_INPUT_USER_HOOK -i wgsrv+ -m comment --comment 00000001095216690483 -j UBIOS_VPN_LOCAL_USER
-A UBIOS_LAN_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390b;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_DMZ_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LAN_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3907;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_GUEST_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LAN_IN_USER -d 203.0.113.2/32 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3923;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -d 203.0.113.2/32 -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d391b;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m comment --comment 00000001095216690481 -j UBIOS_LAN_DMZ_USER
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3912;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m comment --comment 00000001095216690482 -j UBIOS_LAN_GUEST_USER
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c1f5a3e5e589764c4f021c;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m comment --comment 00000001095216690483 -j UBIOS_LAN_LAN_USER
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3916;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m comment --comment 00000001095216690485 -j UBIOS_LAN_VPN_USER
-A UBIOS_LAN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3913;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m comment --comment 00000001095216690486 -j UBIOS_LAN_WAN_USER
-A UBIOS_LAN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3924;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690487 -j ACCEPT
-A UBIOS_LAN_IN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d392a;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_IN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_LAN_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3909;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_LAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LAN_LOCAL_USER -p udp -m set --match-set UBIOS_mdns_ports_name src -m set --match-set UBIOS_mdns_addresses_name dst -m set --match-set UBIOS_mdns_ports_name dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c51c3df62b8b7c0a20c705;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_LOCAL_USER -p udp -m set --match-set UBIOS_mdns_ports_name src -m set --match-set UBIOS_mdns_addresses_name dst -m set --match-set UBIOS_mdns_ports_name dst -m comment --comment 00000000008589964592 -j ACCEPT
-A UBIOS_LAN_LOCAL_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3901;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_LOCAL_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LAN_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3908;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_VPN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LAN_WAN_USER -p tcp -m time --weekdays Sat,Sun --datestart 2025-09-16T04:00:00 --datestop 2025-09-28T03:59:59 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "[LAN_WAN-A-10000] DESCR=\"Firewall Rull Allow\"" --nflog-threshold 16
-A UBIOS_LAN_WAN_USER -p tcp -m time --weekdays Sat,Sun --datestart 2025-09-16T04:00:00 --datestop 2025-09-28T03:59:59 -m comment --comment 00000000004294977296 -j ACCEPT
-A UBIOS_LAN_WAN_USER -p udp -m time --weekdays Sat,Sun --datestart 2025-09-16T04:00:00 --datestop 2025-09-28T03:59:59 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "[LAN_WAN-A-10000] DESCR=\"Firewall Rull Allow\"" --nflog-threshold 16
-A UBIOS_LAN_WAN_USER -p udp -m time --weekdays Sat,Sun --datestart 2025-09-16T04:00:00 --datestop 2025-09-28T03:59:59 -m comment --comment 00000000008589944592 -j ACCEPT
-A UBIOS_LAN_WAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3905;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_WAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690480 -j DROP
-A UBIOS_LAN_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390a;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LAN_WAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LOCAL_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3969;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LOCAL_DMZ_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LOCAL_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d393a;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LOCAL_GUEST_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LOCAL_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3902;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LOCAL_LAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LOCAL_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d395b;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LOCAL_VPN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_LOCAL_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e5;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_LOCAL_WAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_NETFLOW_IN -o eth3 -j NETFLOW
-A UBIOS_NETFLOW_IN -o eth4 -j NETFLOW
-A UBIOS_NETFLOW_OUT -i eth3 -j NETFLOW
-A UBIOS_NETFLOW_OUT -i eth4 -j NETFLOW
-A UBIOS_OUTPUT_JUMP -j UBIOS_OUTPUT_USER_HOOK
-A UBIOS_OUTPUT_USER_HOOK -o eth4 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68b45fa609d55042380e8d58;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_OUTPUT_USER_HOOK -o eth4 -m comment --comment 00000001095216690480 -j UBIOS_LOCAL_WAN_USER
-A UBIOS_OUTPUT_USER_HOOK -o eth3 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c78f85fa94de25fbbd81fe;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_OUTPUT_USER_HOOK -o eth3 -m comment --comment 00000001095216690481 -j UBIOS_LOCAL_WAN_USER
-A UBIOS_OUTPUT_USER_HOOK -o br0 -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38da;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_OUTPUT_USER_HOOK -o br0 -m comment --comment 00000001095216690482 -j UBIOS_LOCAL_LAN_USER
-A UBIOS_OUTPUT_USER_HOOK -o wgsrv+ -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "686ad4480dfbe7565be71ed6;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_OUTPUT_USER_HOOK -o wgsrv+ -m comment --comment 00000001095216690483 -j UBIOS_LOCAL_VPN_USER
-A UBIOS_VPN_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d395d;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_DMZ_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_VPN_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3962;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_GUEST_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390f;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m comment --comment 00000001095216690480 -j UBIOS_VPN_DMZ_USER
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d390d;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m comment --comment 00000001095216690481 -j UBIOS_VPN_GUEST_USER
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "68c1f5a3e5e589764c4f0219;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m comment --comment 00000001095216690482 -j UBIOS_VPN_LAN_USER
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3914;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m comment --comment 00000001095216690484 -j UBIOS_VPN_VPN_USER
-A UBIOS_VPN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d391d;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m comment --comment 00000001095216690485 -j UBIOS_VPN_WAN_USER
-A UBIOS_VPN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3925;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690486 -j ACCEPT
-A UBIOS_VPN_IN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d392b;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_IN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_VPN_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d395e;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_LAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_VPN_LOCAL_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d395a;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_LOCAL_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_VPN_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3964;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_VPN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_VPN_WAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d395c;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_WAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690480 -j DROP
-A UBIOS_VPN_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d3960;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_VPN_WAN_USER -m comment --comment 00000001097364144127 -j ACCEPT
-A UBIOS_WAN_DMZ_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f0;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_DMZ_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_DMZ_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f9;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_DMZ_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690481 -j DROP
-A UBIOS_WAN_DMZ_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f4;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_DMZ_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_GUEST_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f3;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_GUEST_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_GUEST_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38ff;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_GUEST_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690481 -j DROP
-A UBIOS_WAN_GUEST_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f7;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_GUEST_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_IN_USER -p igmp -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "682727779553693ad9b20269;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -p igmp -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_IN_USER -d 224.0.0.0/4 -p udp -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "682727779553693ad9b20268;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -d 224.0.0.0/4 -p udp -m comment --comment 00000000008589964593 -j ACCEPT
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38eb;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_DMZ_subnets dst -m comment --comment 00000001095216690482 -j UBIOS_WAN_DMZ_USER
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38ea;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_GUEST_subnets dst -m comment --comment 00000001095216690483 -j UBIOS_WAN_GUEST_USER
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e9;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_LAN_subnets dst -m comment --comment 00000001095216690484 -j UBIOS_WAN_LAN_USER
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e6;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m set --match-set UBIOS_VPN_subnets dst -m comment --comment 00000001095216690486 -j UBIOS_WAN_VPN_USER
-A UBIOS_WAN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e8;PREDEFINED_FIREWALL_RULE;NONE" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m set ! --match-set UBIOS_local_zoned_subnets dst -m comment --comment 00000001095216690487 -j UBIOS_WAN_WAN_USER
-A UBIOS_WAN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38ee;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690488 -j ACCEPT
-A UBIOS_WAN_IN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "[WAN_IN-D-2147483647] DESCR=\"[WAN_IN]Block All Traffic\"" --nflog-threshold 16
-A UBIOS_WAN_IN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38ef;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_LAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f8;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690481 -j DROP
-A UBIOS_WAN_LAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38fb;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LAN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_LOCAL_USER -p igmp -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "682727779553693ad9b20263;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -p igmp -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_LOCAL_USER -d 224.0.0.0/4 -p udp -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "682727779553693ad9b20264;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -d 224.0.0.0/4 -p udp -m comment --comment 00000000008589964593 -j ACCEPT
-A UBIOS_WAN_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e0;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690482 -j ACCEPT
-A UBIOS_WAN_LOCAL_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e3;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690483 -j DROP
-A UBIOS_WAN_LOCAL_USER -p udp -m set --match-set UBIOS_wireguard_ports dst -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "682575deb6453c6831157296;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -p udp -m set --match-set UBIOS_wireguard_ports dst -m comment --comment 00000000008589964596 -j ACCEPT
-A UBIOS_WAN_LOCAL_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38e4;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_LOCAL_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f2;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_VPN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_VPN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f6;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_VPN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690481 -j DROP
-A UBIOS_WAN_VPN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38fe;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_VPN_USER -m comment --comment 00000001097364144127 -j DROP
-A UBIOS_WAN_WAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38f1;PREDEFINED_FIREWALL_RULE;ACCEPT" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_WAN_USER -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment 00000001095216690480 -j ACCEPT
-A UBIOS_WAN_WAN_USER -m conntrack --ctstate INVALID -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38fc;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_WAN_USER -m conntrack --ctstate INVALID -m comment --comment 00000001095216690481 -j DROP
-A UBIOS_WAN_WAN_USER -m state --state NEW -m limit --limit 50/sec --limit-burst 100 -j NFLOG --nflog-prefix  "6822814970efff1d386d38fa;PREDEFINED_FIREWALL_RULE;DROP" --nflog-group 1 --nflog-threshold 16
-A UBIOS_WAN_WAN_USER -m comment --comment 00000001097364144127 -j DROP
COMMIT
# Completed on Mon Sep 15 02:42:02 2025
